# pyADA

./: pyproject.toml
pyADA/: __init__.py  __main__.py  cli.py  numpy_compat.py  pyADA.py  utils.py
pyADAqsar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
