[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyADAqsar"
version = "1.2.0"
description = "A cheminformatics package to perform Applicability Domain of molecular fingerprints based in similarity calculation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "Jefferson Richard", email = "jrichardquimica@gmail.com"}
]
keywords = ["Cheminformatics", "Chemistry", "Applicability Domain", "QSAR", "SAR", "Molecular Fingerprint"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "plotly>=5.0.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
molplotly = ["molplotly"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/jeffrichardchemistry/pyADA"
Documentation = "https://github.com/jeffrichardchemistry/pyADA"
Repository = "https://github.com/jeffrichardchemistry/pyADA"
"Bug Tracker" = "https://github.com/jeffrichardchemistry/pyADA/issues"

[project.scripts]
pyada = "pyADA.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyADA*"]

[tool.setuptools.package-data]
pyADA = ["*.json", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88